<resources>
        <string name="app_name">Progetto</string>
        <string name="online_magazine">Online Magazine</string>
        <string name="the">the</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="email">email</string>
        <string name="confirm_password">confirm password</string>
        <string name="remember_password">Remember Password</string>
        <string name="sign_up">Sign Up</string>
        <string name="logout">Logout</string>
        <string name="password2">Password</string>
        <string name="email2">email</string>
        <string name="confirm_password2">confirm password</string>
        <string name="username2">Username</string>
        <string name="online_magazine2">Online Magazine</string>
        <string name="the2">The</string>
        <string name="bottoneScelta1">Autonoma</string>
        <string name="Farmaci" />
        <string name="Contatti" />


</resources>