<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/the2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.162"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.105" />


<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/online_magazine2"
    android:textSize="34sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.306"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.155" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="20dp" />

<EditText
    android:id="@+id/Username"
    android:layout_width="320dp"
    android:layout_height="60dp"
    android:layout_marginStart="46dp"
    android:layout_marginTop="170dp"
    android:layout_marginEnd="22dp"
    android:layout_marginBottom="484dp"
    android:ems="10"
    android:inputType="phone"
    android:text="@string/username2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.043"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    android:autofillHints=""
    tools:ignore="LabelFor" />

<EditText
    android:id="@+id/editTextPhone4"
    android:layout_width="322dp"
    android:layout_height="57dp"
    android:layout_marginStart="48dp"
    android:layout_marginTop="417dp"
    android:layout_marginEnd="47dp"
    android:layout_marginBottom="259dp"
    android:ems="10"
    android:inputType="phone"
    android:text="@string/confirm_password2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.333"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    android:autofillHints=""
    tools:ignore="LabelFor" />

<EditText
    android:id="@+id/email"
    android:layout_width="318dp"
    android:layout_height="57dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="333dp"
    android:layout_marginEnd="45dp"
    android:layout_marginBottom="341dp"
    android:ems="10"
    android:inputType="phone"
    android:text="@string/email2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    android:autofillHints=""
    tools:ignore="LabelFor,TextFields" />

<EditText
    android:id="@+id/Password"
    android:layout_width="322dp"
    android:layout_height="61dp"
    android:layout_marginStart="45dp"
    android:layout_marginTop="246dp"
    android:layout_marginEnd="22dp"
    android:layout_marginBottom="424dp"
    android:ems="10"
    android:inputType="phone"
    android:text="@string/password2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.045"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:ignore="LabelFor,TextFields"
    android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>